[package]
name = "ruby_wasm"
version = "0.0.0"
edition = "2021"
authors = ["Yuta Saito <kateinoigakukun@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6.2", features = ["bytes"] }
bytes = "1"
wizer = "4.0.0"
wasi-vfs-cli = { git = "https://github.com/kateinoigakukun/wasi-vfs/", tag = "0.5.2" }
structopt = "0.3.26"
# https://github.com/bytecodealliance/wasm-tools/pull/1625
wit-component = { git = "https://github.com/bytecodealliance/wasm-tools", rev = "771bc57" }
wasm-compose = "0.203"
wasi-virt = { git = "https://github.com/bytecodealliance/wasi-virt", rev = "02de7b495eba3f1bf786bf17cf2236b7277be7b0", default-features = false }
