[package]
name = "ruby_wasm"
version = "0.0.0"
edition = "2021"
authors = ["Yuta Saito <kateinoigakukun@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.7.1", features = ["bytes"] }
bytes = "1"
wizer = "6.0.0"
wasi-vfs-cli = { git = "https://github.com/kateinoigakukun/wasi-vfs/", tag = "v0.5.3" }
structopt = "0.3.26"
wit-component = "0.219.1"
wasm-compose = "0.216.0"
wasi-virt = { git = "https://github.com/bytecodealliance/wasi-virt", rev = "dadd131d8cf8ed1ed4265e96350f5f166e27a339", default-features = false }
